Update and rename setup file

--- a/scripts/setup_1980_2019.cfg
+++ b/scripts/setup_1980_2019.cfg
@@ -1,5 +1,6 @@
-#-configuration input file for the pcrLite hydrological model
+#-configuration input file for the qualloc water use and allocation model
 # Rens van Beek, Dept. Physical Geography, Utrecht University
+# Gabriel Cardenas, Dept. Physical Geography, Utrecht university
 #
 # NOTES:
 # -information is organized per section ('[section name]'); some sections are parts of listed entries
@@ -24,7 +25,7 @@
 #   groundwater
 
 ###########################################
-# Start of the pcrLite configuration file # 
+# Start of the qualloc configuration file # 
 ###########################################
 [general]
 #-general           :   contains general information for this model run
@@ -42,16 +43,16 @@
 # clone             :   file name of the clone map
 # cellarea          :   file name of the map with the cell area [m^2]
 # 
-scenarioname        = default
-inputpath           = pcrLite/data_global
-outputpath          = pcrLite/_outputs/2015_true
-clone               = maps/clone_global_05min.map
+scenarioname        = WQ_true
+inputpath           = ./data_global
+outputpath          = ./_outputs/1980_2019_true/M01
+clone               = maps/masks/mask_M01.map
 cellarea            = maps/cellarea.map
 
 [netcdfattrs]
 #-netcdfattrs       : contains information on the global netCDF attributes to
 #                     be written to output netCDF files
-author              = Oni & Kami
+author              = Gabriel A. Cardenas B.
 
 [time]
 #-time              : contains information on the time period to be covered by
@@ -60,14 +61,14 @@ author              = Oni & Kami
 # endyear           : year in which the simulation ends.
 # time_increment    : timestep increment to be used; currently: daily, monthly
 #                     allowed
-startyear           = 2015
-endyear             = 2015
+startyear           = 1979
+endyear             = 2019
 time_increment      = monthly
 
 
 [forcing]
 #-forcing          : contains information on the dynamic datasets that are
-#                    required to force the pcrLite model.
+#                    required to force the qualloc model.
 #                    all data are read dynamically and can be specified as 
 #                    rates or totals over the time step increment; values are
 #                    specified in units of water slice and are aggregated
@@ -103,17 +104,17 @@ time_increment      = monthly
 precipitation_ncfile               = netcdf/precipitation_monthTot_1979_2019_05arcmin.nc
 refpot_evaporation_ncfile          = netcdf/referencePotET_monthTot_1979_2019_05arcmin.nc
 groundwater_recharge_ncfile        = netcdf/gwRecharge_monthTot_1979_2019_05arcmin.nc
-direct_runoff_ncfile                = netcdf/directRunoff_monthTot_1979_2019_05arcmin.nc
-interflow_ncfile                    = netcdf/interflowTotal_monthTot_1979_2019_05arcmin.nc
+direct_runoff_ncfile               = netcdf/directRunoff_monthTot_1979_2019_05arcmin.nc
+interflow_ncfile                   = netcdf/interflowTotal_monthTot_1979_2019_05arcmin.nc
 irrigation_water_demand_ncfile     = netcdf/irrGrossDemand_monthTot_1979_2019_05arcmin.nc
 domestic_water_demand_ncfile       = netcdf/domestic_water_demand_1979_2019_m_day_05arcmin.nc
-#industrial_water_demand_ncfile    = netcdf/industry_water_demand_1979_2019_m_day_05arcmin.nc
+industrial_water_demand_ncfile     = netcdf/industry_water_demand_1979_2019_m_day_05arcmin.nc
 livestock_water_demand_ncfile      = netcdf/livestock_water_demand_1979_2019_m_day_05arcmin.nc
 manufacture_water_demand_ncfile    = netcdf/manufacture_water_demand_1979_2019_m_day_05arcmin.nc
 thermoelectric_water_demand_ncfile = netcdf/thermoelectric_water_demand_1979_2019_m_day_05arcmin.nc
+environment_water_demand_ncfile    = netcdf/environmental_flow_demands_1979_2019_m_day_05arcmin_variable.nc
 # totals - sums per timestep - and rates per day
 totals = precipitation,refpot_evaporation,groundwater_recharge,direct_runoff,interflow,irrigation_water_demand
-#rates  = domestic_water_demand,industrial_water_demand,livestock_water_demand
 rates  = domestic_water_demand,livestock_water_demand,manufacture_water_demand,thermoelectric_water_demand
 
 [groundwater]
@@ -209,24 +210,27 @@ surfacewater_storage_ini = initial/surfacewater_storage.nc
 #                                          ility [m3/day]
 # prioritization_flag                    : boolean indicating if sectors are prioritized
 
-# sectors to analyse (irrigation,domestic,industry,livestock,manufacture,thermoelectric)
+# sectors to analyse (irrigation,domestic,industry,livestock,manufacture,thermoelectric,environment)
 sector_names = irrigation,domestic,livestock,manufacture,thermoelectric
 
 # temporal settings
-#time_increment                             = monthly
-time_increment                             = yearly
+time_increment                             = monthly
+#time_increment                            = yearly
 
 # other water management options
-# pump capacity and update weight
-surfacewater_withdrawal_capacity           = None
+# pumping capacity and update weight
 surfacewater_update_weight                 = 0.5
-groundwater_withdrawal_capacity            = None
+surfacewater_withdrawal_capacity           = None
+surfacewater_regional_pumping_capacity     = None
 groundwater_update_weight                  = 0.5
-regional_pumping_capacity                  = netcdf/original/regional_pumping_capacity_1980_2019.nc
+groundwater_withdrawal_capacity            = None
+groundwater_regional_pumping_capacity      = None
+#groundwater_regional_pumping_capacity     = netcdf/original/regional_pumping_capacity_1980_2019.nc
 
 # initial conditions, long-term availability and initial return flows
-groundwater_longterm_availability_ini      = initial/groundwater_longterm_availability.nc
-surfacewater_longterm_availability_ini     = initial/surfacewater_longterm_availability.nc
+groundwater_longterm_storage_ini           = initial/groundwater_longterm_storage.nc
+surfacewater_longterm_discharge_ini        = initial/surfacewater_longterm_discharge.nc
+surfacewater_longterm_runoff_ini           = initial/surfacewater_longterm_runoff.nc
 total_return_flow_ini                      = initial/total_return_flow.nc
 
 # sectoral prioritization
@@ -236,6 +240,7 @@ prioritization_surfacewater_domestic       = 1
 prioritization_surfacewater_industry       = 1
 prioritization_surfacewater_manufacture    = 1
 prioritization_surfacewater_thermoelectric = 1
+prioritization_surfacewater_environment    = 1
 
 prioritization_groundwater_irrigation      = 1
 prioritization_groundwater_livestock       = 1
@@ -243,6 +248,7 @@ prioritization_groundwater_domestic        = 1
 prioritization_groundwater_industry        = 1
 prioritization_groundwater_manufacture     = 1
 prioritization_groundwater_thermoelectric  = 1
+prioritization_groundwater_environment     = 1
 
 # standard PCR-GLOBWB allocation settings
 surfacewater_allocation_zones              = maps/abstraction_zones_60min_05min.map
@@ -275,14 +281,15 @@ limit_temperature_domestic       = None
 limit_temperature_industry       = 30.
 limit_temperature_manufacture    = 30.
 limit_temperature_thermoelectric = maps/limit_temperature_thermoelectric_global_05arcmin.map
-#limit_temperature_thermoelectric = 30.
+limit_temperature_environment    = None
 # - Biochemical Oxigen Demand (mg/L)
 limit_organic_irrigation         = 15.
 limit_organic_livestock          = None
 limit_organic_domestic           = 5.
 limit_organic_industry           = 30.
-limit_organic_manufacture        = 30.
-limit_organic_thermoelectric     = 30.
+limit_organic_manufacture        = None
+limit_organic_thermoelectric     = None
+limit_organic_environment        = None
 # - Total Dissolved Solid (mg/L)
 limit_salinity_irrigation        = 450.
 limit_salinity_livestock         = None
@@ -290,6 +297,7 @@ limit_salinity_domestic          = 600.
 limit_salinity_industry          = 7000.
 limit_salinity_manufacture       = 7000.
 limit_salinity_thermoelectric    = 7000.
+limit_salinity_environment       = None
 # - Feacal Coliforms (cfu/100ml)
 limit_pathogen_irrigation        = None
 limit_pathogen_livestock         = None
@@ -297,6 +305,8 @@ limit_pathogen_domestic          = 1000
 limit_pathogen_industry          = None
 limit_pathogen_manufacture       = None
 limit_pathogen_thermoelectric    = None
+limit_pathogen_environment       = None
+
 
 [reporting]
 # comma-separated lists should be provided. No whitespace is allowed in the
