--- a/config/setup_1980_2019.cfg
+++ b/config/setup_1980_2019.cfg
@@ -44,15 +44,16 @@
 # cellarea          :   file name of the map with the cell area [m^2]
 # 
 scenarioname        = WQ_true
-inputpath           = ./data_global
-outputpath          = ./_outputs/1980_2019_true/M01
+inputpath           = ./data
+outputpath          = ./outputs/wqTrue/M01
 clone               = maps/masks/mask_M01.map
 cellarea            = maps/cellarea.map
 
 [netcdfattrs]
 #-netcdfattrs       : contains information on the global netCDF attributes to
 #                     be written to output netCDF files
-author              = Gabriel A. Cardenas B.
+description         = QUAlloc v1.1 run, one-way coupled at 5 arcmin resolution, historical period (water quality = True)
+author              = Gabriel Cardenas (g.a.cardenasbelleza@uu.nl)
 
 [time]
 #-time              : contains information on the time period to be covered by
@@ -215,7 +216,9 @@ sector_names = irrigation,domestic,livestock,manufacture,thermoelectric
 
 # temporal settings
 time_increment                             = monthly
-#time_increment                            = yearly
+
+# evaluation of desalinated water use
+desalinated_water_use_flag                 = True
 
 # other water management options
 # pumping capacity and update weight
@@ -234,6 +237,10 @@ surfacewater_longterm_runoff_ini           = initial/surfacewater_longterm_runof
 total_return_flow_ini                      = initial/total_return_flow.nc
 
 # sectoral prioritization
+prioritization_desalwater_domestic         = 1
+prioritization_desalwater_industry         = 1
+prioritization_desalwater_manufacture      = 1
+
 prioritization_surfacewater_irrigation     = 1
 prioritization_surfacewater_livestock      = 1
 prioritization_surfacewater_domestic       = 1
@@ -251,6 +258,8 @@ prioritization_groundwater_thermoelectric  = 1
 prioritization_groundwater_environment     = 1
 
 # standard PCR-GLOBWB allocation settings
+desalwater_allocation_zones                = maps/abstraction_zones_60min_05min.map
+desalwater_withdrawal_points               = maps/abstraction_by_cells.map
 surfacewater_allocation_zones              = maps/abstraction_zones_60min_05min.map
 surfacewater_withdrawal_points             = maps/abstraction_by_cells.map
 groundwater_allocation_zones               = maps/abstraction_zones_60min_05min.map
@@ -278,9 +287,9 @@ surfacewater_pathogen_ncfile    = netcdf/pathogen_monthlyAvg_1979_2019.nc
 limit_temperature_irrigation     = None
 limit_temperature_livestock      = None
 limit_temperature_domestic       = None
-limit_temperature_industry       = 30.
-limit_temperature_manufacture    = 30.
-limit_temperature_thermoelectric = maps/limit_temperature_thermoelectric_global_05arcmin.map
+limit_temperature_industry       = maps/limit_temperature_thermoelectric_DynQual_95th.map
+limit_temperature_manufacture    = maps/limit_temperature_thermoelectric_DynQual_95th.map
+limit_temperature_thermoelectric = maps/limit_temperature_thermoelectric_DynQual_95th.map
 limit_temperature_environment    = None
 # - Biochemical Oxigen Demand (mg/L)
 limit_organic_irrigation         = 15.
@@ -314,9 +323,9 @@ limit_pathogen_environment       = None
 nc_format                    = NETCDF4
 zlib                         = True
 daily_tot                    = None
-monthly_avg                  = None
-monthly_tot                  = demand_domestic_allocated_to_renewable_surfacewater,demand_manufacture_allocated_to_renewable_surfacewater,demand_thermoelectric_allocated_to_renewable_surfacewater,demand_irrigation_allocated_to_renewable_surfacewater,demand_livestock_allocated_to_renewable_surfacewater,demand_domestic_allocated_to_renewable_groundwater,demand_manufacture_allocated_to_renewable_groundwater,demand_thermoelectric_allocated_to_renewable_groundwater,demand_irrigation_allocated_to_renewable_groundwater,demand_livestock_allocated_to_renewable_groundwater,demand_domestic_allocated_to_nonrenewable_groundwater,demand_manufacture_allocated_to_nonrenewable_groundwater,demand_thermoelectric_allocated_to_nonrenewable_groundwater,demand_irrigation_allocated_to_nonrenewable_groundwater,demand_livestock_allocated_to_nonrenewable_groundwater,withdrawal_domestic_allocated_to_renewable_surfacewater,withdrawal_manufacture_allocated_to_renewable_surfacewater,withdrawal_thermoelectric_allocated_to_renewable_surfacewater,withdrawal_irrigation_allocated_to_renewable_surfacewater,withdrawal_livestock_allocated_to_renewable_surfacewater,withdrawal_domestic_allocated_to_renewable_groundwater,withdrawal_manufacture_allocated_to_renewable_groundwater,withdrawal_thermoelectric_allocated_to_renewable_groundwater,withdrawal_irrigation_allocated_to_renewable_groundwater,withdrawal_livestock_allocated_to_renewable_groundwater,withdrawal_domestic_allocated_to_nonrenewable_groundwater,withdrawal_manufacture_allocated_to_nonrenewable_groundwater,withdrawal_thermoelectric_allocated_to_nonrenewable_groundwater,withdrawal_irrigation_allocated_to_nonrenewable_groundwater,withdrawal_livestock_allocated_to_nonrenewable_groundwater
-yearly_tot                   = None
+monthly_avg                  = demand_domestic_allocated_to_renewable_surfacewater,demand_manufacture_allocated_to_renewable_surfacewater,demand_thermoelectric_allocated_to_renewable_surfacewater,demand_irrigation_allocated_to_renewable_surfacewater,demand_livestock_allocated_to_renewable_surfacewater,demand_domestic_allocated_to_renewable_groundwater,demand_manufacture_allocated_to_renewable_groundwater,demand_thermoelectric_allocated_to_renewable_groundwater,demand_irrigation_allocated_to_renewable_groundwater,demand_livestock_allocated_to_renewable_groundwater,demand_domestic_allocated_to_nonrenewable_groundwater,demand_manufacture_allocated_to_nonrenewable_groundwater,demand_thermoelectric_allocated_to_nonrenewable_groundwater,demand_irrigation_allocated_to_nonrenewable_groundwater,demand_livestock_allocated_to_nonrenewable_groundwater,withdrawal_domestic_allocated_to_renewable_surfacewater,withdrawal_manufacture_allocated_to_renewable_surfacewater,withdrawal_thermoelectric_allocated_to_renewable_surfacewater,withdrawal_irrigation_allocated_to_renewable_surfacewater,withdrawal_livestock_allocated_to_renewable_surfacewater,withdrawal_domestic_allocated_to_renewable_groundwater,withdrawal_manufacture_allocated_to_renewable_groundwater,withdrawal_thermoelectric_allocated_to_renewable_groundwater,withdrawal_irrigation_allocated_to_renewable_groundwater,withdrawal_livestock_allocated_to_renewable_groundwater,withdrawal_domestic_allocated_to_nonrenewable_groundwater,withdrawal_manufacture_allocated_to_nonrenewable_groundwater,withdrawal_thermoelectric_allocated_to_nonrenewable_groundwater,withdrawal_irrigation_allocated_to_nonrenewable_groundwater,withdrawal_livestock_allocated_to_nonrenewable_groundwater
+yearly_avg                   = None
 overwrite_initial_conditions = True
 
 #///end of configuration file///
+
