--- a/config/setup_1980_2019.cfg
+++ b/config/setup_1980_2019.cfg
@@ -6,17 +6,13 @@
 # -information is organized per section ('[section name]'); some sections are parts of listed entries
 # -comma separated- as introduced under the section '[general model settings]', found directly below
 #  nested lists are to be separated by semi-colons, e.g., nestedList= 1,2;3,4 => [[1,2],[3,4]];
-# -paths should be given as absolute references
-#  and separated by forward slashes following python's convention;
 # -comments can be included when preceded by '#'; ideally, comments on the provenance of data
 #  and any additional information should be included at the end of each section;
-# -names follow the names in the script and are generally given in camelCase
 #
-# - all input files can be specified as absolute or relative paths. All relative
-#   paths of input files are automatically converted to absolute pathsby adding
-#   the generic input path. absolute input paths are left unchanged;
-# - all output files are generated automatically on the basis of the provided
-#   variable names.
+# - all input files can be specified as absolute or relative paths, and separated by forward slashes 
+#   following python's convention. All relative paths of input files are automatically converted to
+#   absolute paths by adding the generic input path. absolute input paths are left unchanged;
+# - all output files are generated automatically on the basis of the provided variable names.
 #
 # - the following sections are compulsory:
 #   general
@@ -48,12 +44,14 @@ inputpath           = ./data
 outputpath          = ./outputs/wqTrue/M01
 clone               = maps/masks/mask_M01.map
 cellarea            = maps/cellarea.map
+overwrite_output    = True
 
 [netcdfattrs]
 #-netcdfattrs       : contains information on the global netCDF attributes to
 #                     be written to output netCDF files
 description         = QUAlloc v1.1 run, one-way coupled at 5 arcmin resolution, historical period (water quality = True)
 author              = Gabriel Cardenas (g.a.cardenasbelleza@uu.nl)
+institution         = Department of Physical Geography, Utrecht University
 
 [time]
 #-time              : contains information on the time period to be covered by
@@ -62,12 +60,13 @@ author              = Gabriel Cardenas (g.a.cardenasbelleza@uu.nl)
 # endyear           : year in which the simulation ends.
 # time_increment    : timestep increment to be used; currently: daily, monthly
 #                     allowed
-startyear           = 1979
+startyear           = 1980
 endyear             = 2019
-time_increment      = monthly
+time_increment      = daily
 
 
 [forcing]
+# this options are needed whenthe fully coupled setup is not simulated
 #-forcing          : contains information on the dynamic datasets that are
 #                    required to force the qualloc model.
 #                    all data are read dynamically and can be specified as 
@@ -132,8 +131,8 @@ rates  = domestic_water_demand,livestock_water_demand,manufacture_water_demand,t
 #
 alpha                   = maps/groundwater_alpha.map
 alpha_default           = 0.01
-total_base_flow_ini     = initial/total_base_flow.nc
-groundwater_storage_ini = initial/groundwater_storage.nc
+total_base_flow_ini     = initial/total_base_flow_1979-12-31.nc
+groundwater_storage_ini = initial/groundwater_storage_1979-12-31.nc
 
 [surfacewater]
 # ldd                : local drainage direction map [-]
@@ -154,8 +153,8 @@ channel_gradient         = maps/channel_gradient.map
 channel_width            = maps/channel_width.map
 channel_depth            = maps/channel_depth.map
 channel_length           = maps/channel_length.map
-mannings_n               = 0.03
-surfacewater_storage_ini = initial/surfacewater_storage.nc
+mannings_n               = 0.04
+surfacewater_storage_ini = initial/surfacewater_storage_1979-12-31.nc
 
 [water_management]
 #-water management      : specifies the input for the class that manages the 
@@ -219,22 +218,40 @@ time_increment                             = monthly
 
 # evaluation of desalinated water use
 desalinated_water_use_flag                 = True
+desalinated_water_use                      = netcdf/desalinated_water_use_1945_2021_m_day_05arcmin.nc
 
 # other water management options
 # pumping capacity and update weight
-surfacewater_update_weight                 = 0.5
+# regional pumping capacity in [bm3]
 surfacewater_withdrawal_capacity           = None
 surfacewater_regional_pumping_capacity     = None
-groundwater_update_weight                  = 0.5
 groundwater_withdrawal_capacity            = None
-groundwater_regional_pumping_capacity      = None
-#groundwater_regional_pumping_capacity     = netcdf/original/regional_pumping_capacity_1980_2019.nc
+groundwater_regional_pumping_capacity      = netcdf/historic/regional_pumping_capacity_1980_2100.nc
 
 # initial conditions, long-term availability and initial return flows
-groundwater_longterm_storage_ini           = initial/groundwater_longterm_storage.nc
-surfacewater_longterm_discharge_ini        = initial/surfacewater_longterm_discharge.nc
-surfacewater_longterm_runoff_ini           = initial/surfacewater_longterm_runoff.nc
-total_return_flow_ini                      = initial/total_return_flow.nc
+groundwater_longterm_storage_ini           = initial/groundwater_longterm_storage_1979-12-31.nc
+surfacewater_longterm_discharge_ini        = initial/surfacewater_longterm_discharge_1979-12-31.nc
+surfacewater_longterm_runoff_ini           = initial/surfacewater_longterm_runoff_1979-12-31.nc
+
+gross_demand_longterm_domestic_ini         = initial/gross_demand_longterm_domestic_1979-12-31.nc
+gross_demand_longterm_irrigation_ini       = initial/gross_demand_longterm_irrigation_1979-12-31.nc
+gross_demand_longterm_livestock_ini        = initial/gross_demand_longterm_livestock_1979-12-31.nc
+gross_demand_longterm_manufacture_ini      = initial/gross_demand_longterm_manufacture_1979-12-31.nc
+gross_demand_longterm_thermoelectric_ini   = initial/gross_demand_longterm_thermoelectric_1979-12-31.nc
+
+total_return_flow_ini                      = initial/total_return_flow_1979-12-31.nc
+
+groundwater_longterm_potential_withdrawal_ini  = initial/groundwater_longterm_potential_withdrawal_1979-12-31.nc
+surfacewater_longterm_potential_withdrawal_ini = None
+
+# long-term update weights (1/years)
+surfacewater_update_weight                 = 0.5
+groundwater_update_weight                  = 0.5
+domestic_update_weight                     = 0.5
+irrigation_update_weight                   = 0.5
+livestock_update_weight                    = 0.5
+manufacture_update_weight                  = 0.5
+thermoelectric_update_weight               = 0.5
 
 # sectoral prioritization
 prioritization_desalwater_domestic         = 1
@@ -271,10 +288,10 @@ groundwater_withdrawal_points              = maps/abstraction_by_cells.map
 water_quality_flag = True
 
 # initial conditions, long-term availability and initial return flows
-surfacewater_longterm_temperature_ini = initial/surfacewater_longterm_temperature.nc
-surfacewater_longterm_organic_ini     = initial/surfacewater_longterm_organic.nc
-surfacewater_longterm_salinity_ini    = initial/surfacewater_longterm_salinity.nc
-surfacewater_longterm_pathogen_ini    = initial/surfacewater_longterm_pathogen.nc
+surfacewater_longterm_temperature_ini = initial/surfacewater_longterm_temperature_1979-12-31.nc
+surfacewater_longterm_organic_ini     = initial/surfacewater_longterm_organic_1979-12-31.nc
+surfacewater_longterm_salinity_ini    = initial/surfacewater_longterm_salinity_1979-12-31.nc
+surfacewater_longterm_pathogen_ini    = initial/surfacewater_longterm_pathogen_1979-12-31.nc
 
 # water quality constituent input files
 surfacewater_temperature_ncfile = netcdf/waterTemperature_monthlyAvg_1979_2019.nc
@@ -293,27 +310,27 @@ limit_temperature_thermoelectric = maps/limit_temperature_thermoelectric_DynQual
 limit_temperature_environment    = None
 # - Biochemical Oxigen Demand (mg/L)
 limit_organic_irrigation         = 15.
-limit_organic_livestock          = None
+limit_organic_livestock          = 8.
 limit_organic_domestic           = 5.
-limit_organic_industry           = 30.
-limit_organic_manufacture        = None
-limit_organic_thermoelectric     = None
+limit_organic_industry           = 15.
+limit_organic_manufacture        = 15.
+limit_organic_thermoelectric     = 15.
 limit_organic_environment        = None
 # - Total Dissolved Solid (mg/L)
-limit_salinity_irrigation        = 450.
-limit_salinity_livestock         = None
-limit_salinity_domestic          = 600.
+limit_salinity_irrigation        = 2100.
+limit_salinity_livestock         = 2000.
+limit_salinity_domestic          = 2000.
 limit_salinity_industry          = 7000.
 limit_salinity_manufacture       = 7000.
 limit_salinity_thermoelectric    = 7000.
 limit_salinity_environment       = None
 # - Feacal Coliforms (cfu/100ml)
-limit_pathogen_irrigation        = None
-limit_pathogen_livestock         = None
-limit_pathogen_domestic          = 1000
-limit_pathogen_industry          = None
-limit_pathogen_manufacture       = None
-limit_pathogen_thermoelectric    = None
+limit_pathogen_irrigation        = 2000.
+limit_pathogen_livestock         = 5000.
+limit_pathogen_domestic          = 1000.
+limit_pathogen_industry          = 5000.
+limit_pathogen_manufacture       = 5000.
+limit_pathogen_thermoelectric    = 5000.
 limit_pathogen_environment       = None
 
 
@@ -328,4 +345,5 @@ yearly_avg                   = None
 overwrite_initial_conditions = True
 
 #///end of configuration file///
+
 
